[project]
name = "zeno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic-ai[examples]>=0.7.4",
    "pyrefly>=0.29.2",
    "python-telegram-bot>=22.3",
    "sqlmodel>=0.0.24",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[tool]
