[project]
name = "zeno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "flask>=3.1.2",
    "logfire>=4.3.5",
    "pydantic-ai[examples]>=0.7.4",
    "pyrefly>=0.29.2",
    "python-telegram-bot>=22.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[tool]
