[project]
name = "zeno"
version = "0.1.0"
description = "AI chatbot for organizing your life."
authors = [{ name = "paperbenni", email = "paperbenni@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["ai", "chatbot", "organizer", "telegram"]
dependencies = [
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "flask>=3.1.2",
    "logfire>=4.3.5",
    "pydantic-ai[examples]>=0.7.4",
    "pyrefly>=0.29.2",
    "python-telegram-bot>=22.3",
    "pytz>=2024.1",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.11.1",
    "uvicorn>=0.35.0",
]

[project.urls]
"Homepage" = "https://github.com/paperbenni/zenorganizer"
"Repository" = "https://github.com/paperbenni/zenorganizer"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/node_modules", "**/__pycache__", "**/*venv/**/*"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.3",
    "types-pytz>=2024.1.1",
    "types-requests>=2.32.0.20240827",
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
